--- a/index.html
+++ b/index.html
@@ -193,12 +193,9 @@
       <div class="container-fluid mt-3">
         <h3>Offcanvas Sidebar</h3>
         <p>Offcanvas is similar to modals, except that it is often used as a sidebar.</p>
-        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo1">
-          Open Offcanvas Sidebar
-        </button>
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo1" style="background-color: green;">Open Offcanvas Sidebar</button>
       </div>
       <!-- fin del boton ofcanvas -->
-
     </div>
 
     <!-- Inicio Callapse -->
